@@ -44,6 +44,7 @@ import org.wso2.ballerinalang.compiler.semantics.model.types.BParameterizedType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BRecordType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BStreamType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BTableType;
+import org.wso2.ballerinalang.compiler.semantics.model.types.BTupleMember;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BTupleType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BTypeReferenceType;
@@ -221,7 +222,7 @@ public class Unifier implements BTypeVisitor<BType, BType> {
         BTupleType expTupleType = hasMatchedTupleType ? matchingType : null;
 
         if (hasMatchedTupleType) {
-            if (expTupleType.tupleTypes.size() != originalType.tupleTypes.size()) {
+            if (expTupleType.members.size() != originalType.members.size()) {
                 hasMatchedTupleType = false;
             } else {
                 BType expRestType = expTupleType.restType;
@@ -233,23 +234,24 @@ public class Unifier implements BTypeVisitor<BType, BType> {
             }
         }
 
-        List<BType> expTupleTypes = hasMatchedTupleType ? List.copyOf(expTupleType.tupleTypes) :
-                Collections.singletonList(null);
+        List<BTupleMember> expTupleTypes = hasMatchedTupleType ? List.copyOf(expTupleType.members) :
+                Collections.singletonList(new BTupleMember(null, null));
 
-        List<BType> members = new ArrayList<>();
+        List<BTupleMember> members = new ArrayList<>();
         int delta = hasMatchedTupleType ? 1 : 0;
 
         boolean errored = false;
 
-        List<BType> tupleTypes = originalType.tupleTypes;
+        List<BTupleMember> tupleTypes = originalType.members;
         for (int i = 0, j = 0; i < tupleTypes.size(); i++, j += delta) {
-            if (this.visitedTypes.contains(tupleTypes.get(i))) {
+            if (this.visitedTypes.contains(tupleTypes.get(i).type)) {
                 continue;
             }
-            BType member = tupleTypes.get(i);
-            BType expMember = expTupleTypes.get(j);
+            BType member = tupleTypes.get(i).type;
+            BType expMember = expTupleTypes.get(j).type;
             BType newMem = member.accept(this, expMember);
-            members.add(newMem);
+            BVarSymbol varSymbol = new BVarSymbol(newMem.flags, null, null, newMem, null, null, null);
+            members.add(new BTupleMember(newMem, varSymbol));
 
             if (isSemanticErrorInInvocation(newMem)) {
                 errored = true;
@@ -665,7 +667,8 @@ public class Unifier implements BTypeVisitor<BType, BType> {
             if (restArgType.tag == TypeTags.RECORD) {
                 return getConstraintTypeIfNotError(((BRecordType) restArgType).fields.get(paramName).type);
             }
-            return getConstraintTypeIfNotError(((BTupleType) restArgType).tupleTypes.get(index - requiredArgCount));
+            return getConstraintTypeIfNotError(
+                    ((BTupleType) restArgType).members.get(index - requiredArgCount).type);
         }
 
         BLangNamedArgsExpression namedArg = createTypedescExprNamedArg(expType, paramName);
@@ -810,7 +813,7 @@ public class Unifier implements BTypeVisitor<BType, BType> {
     private void populateParamMapFromTupleRestArg(List<BVarSymbol> params, int currentParamIndex,
                                                   BTupleType tupleType) {
         int tupleIndex = 0;
-        List<BType> tupleTypes = tupleType.tupleTypes;
+        List<BType> tupleTypes = tupleType.getTupleTypes();
         for (int i = currentParamIndex; i < params.size(); i++) {
             paramValueTypes.put(params.get(i).name.value, tupleTypes.get(tupleIndex++));
         }
@@ -1083,8 +1086,9 @@ public class Unifier implements BTypeVisitor<BType, BType> {
             case TypeTags.TUPLE:
                 BTupleType tupleType = (BTupleType) type;
 
-                for (BType tupleMemType : tupleType.tupleTypes) {
-                    if (refersInferableParamName(paramsWithInferredTypedescDefault, tupleMemType, unresolvedTypes)) {
+                for (BType tupleMember : tupleType.getTupleTypes()) {
+                    if (refersInferableParamName(
+                            paramsWithInferredTypedescDefault, tupleMember, unresolvedTypes)) {
                         return true;
                     }
                 }
